Hook up Disk table controls
Hook up the switches on the Disks table. Turn off selectability, it's not needed. Make sure we correctly write cdrom and disk prefs. Recognize ,cdr file extension as CDROM.

--- a/SheepShaver/src/MacOSX/SheepShaveriOS/SSPreferencesDisksViewController.xib
+++ b/SheepShaver/src/MacOSX/SheepShaveriOS/SSPreferencesDisksViewController.xib
@@ -60,7 +60,7 @@
                         <constraint firstAttribute="height" constant="31" id="tmp-KM-tHD"/>
                     </constraints>
                     <connections>
-                        <action selector="bootFromCDROMFirstSwitchHit:" destination="-1" eventType="valueChanged" id="uaj-BG-LLW"/>
+                        <action selector="bootFromCDROMFirstSwitchHit:" destination="-1" eventType="valueChanged" id="Huc-Gy-U67"/>
                     </connections>
                 </switch>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L3F-Cp-r6a" userLabel="Separator View">
