add importing of disks from filesystem

--- a/SheepShaver/src/MacOSX/SheepShaveriOS/SSPreferencesDisksViewController.xib
+++ b/SheepShaver/src/MacOSX/SheepShaveriOS/SSPreferencesDisksViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SSPreferencesDisksViewController">
             <connections>
                 <outlet property="bootFromCDROMFirstSwitch" destination="YA8-y7-dGe" id="o53-8V-HNN"/>
+                <outlet property="addExistingDiskButton" destination="aED-Ex-Dsk" id="Add-Ex-Btn"/>
                 <outlet property="createNewDiskButton" destination="cpt-gD-vlZ" id="LQw-XF-gDk"/>
                 <outlet property="diskTable" destination="Fvq-JN-ILU" id="9av-xc-Oxw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -83,7 +84,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="100" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpt-gD-vlZ">
-                    <rect key="frame" x="96" y="20" width="128" height="30"/>
+                    <rect key="frame" x="16" y="20" width="128" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="lgy-bQ-AuI"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="ym4-HV-uYl"/>
@@ -91,6 +92,17 @@
                     <state key="normal" title="Create New Disk..."/>
                     <connections>
                         <action selector="createNewDiskButtonHit:" destination="-1" eventType="touchDown" id="B3H-1O-75i"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="100" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aED-Ex-Dsk">
+                    <rect key="frame" x="176" y="20" width="128" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="AED-hg-con"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="AED-wd-con"/>
+                    </constraints>
+                    <state key="normal" title="Add Existing Disk..."/>
+                    <connections>
+                        <action selector="addExistingDiskButtonHit:" destination="-1" eventType="touchDown" id="AED-ac-con"/>
                     </connections>
                 </button>
             </subviews>
@@ -105,7 +117,9 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Fvq-JN-ILU" secondAttribute="trailing" constant="16" id="cRN-Lz-Z7z"/>
                 <constraint firstItem="L3F-Cp-r6a" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="f3s-Cl-ntZ"/>
                 <constraint firstItem="YA8-y7-dGe" firstAttribute="leading" secondItem="ljo-uM-FEW" secondAttribute="trailing" constant="8" symbolic="YES" id="gGT-pg-bUV"/>
-                <constraint firstItem="cpt-gD-vlZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="h2x-Wz-b39"/>
+                <constraint firstItem="cpt-gD-vlZ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="16" id="cpt-ld-con"/>
+                <constraint firstItem="aED-Ex-Dsk" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" constant="-16" id="aED-tr-con"/>
+                <constraint firstItem="aED-Ex-Dsk" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="20" id="aED-tp-con"/>
                 <constraint firstItem="6jO-bN-ISs" firstAttribute="leading" secondItem="V8f-il-QYF" secondAttribute="trailing" constant="8" symbolic="YES" id="iZ0-8K-oqW"/>
                 <constraint firstItem="L3F-Cp-r6a" firstAttribute="top" secondItem="YA8-y7-dGe" secondAttribute="bottom" constant="8" symbolic="YES" id="iw3-fg-gln"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="heK-lp-J36" secondAttribute="trailing" constant="17" id="jTX-Yr-GO3"/>
